trunk/Archive2/27/c559bbb211b082/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:14:18: error: ‘test_2’ was not declared in this scope
     std::cout << test_2;
                  ^
main.cpp:14:24: error: expected ‘}’ before ‘;’ token
     std::cout << test_2;
                        ^
main.cpp:15:1: error: expected declaration before ‘}’ token
 }
 ^
